applications/traefik/templates/traefik-ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.kind.shokohsc.home`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`argocd.kind.shokohsc.home`)
    priority: 0
    services:
    - kind: Service
      name: argocd-server
      port: 80
